Upgraded the messaging to the user