@@ -24,7 +24,7 @@ public class Deck {
 
     public Card deal() {
         if(!cards.isEmpty()) {
-            return cards.remove(0);
+            return cards.removeFirst();
         } else {
             return null;
         }
